# Combinatorial-GMDH

./: CMakeLists.txt  README.md  dependencies.cuh  main.cu  matrix.cu  matrix.cuh  ops.cu  ops.cuh  tests.cu  tests.cuh  utils.cu  utils.cuh
